docs/app/docs/v2/showcase/projects-using-yaci-store/page.mdx
import { Callout } from 'nextra/components'

# Projects Using Yaci Store

Discover how organizations and developers are leveraging Yaci Store to build powerful Cardano applications.

<Callout type="info">
Is your project using Yaci Store? We'd love to feature it here! Please [open a PR](https://github.com/bloxbean/yaci-store/pulls) or [create an issue](https://github.com/bloxbean/yaci-store/issues).
</Callout>

## Community Projects

### [Cardano Rosetta Java](https://github.com/cardano-foundation/cardano-rosetta-java)
**Cardano Foundation**
The official Rosetta API implementation for Cardano, enabling seamless blockchain integration for exchanges and wallets. Built on Yaci Store for reliable blockchain data indexing.

---

### [FluidTokens Aquarium Node](https://github.com/FluidTokens/ft-aquarium-node)
**FluidTokens**
The Aquarium Node is a java app which indexes FluidTokens users' Tanks utxos and processes Scheduled Transactions when conditions are met.

---

### [UPLC Link](https://uplc.link/)
**UPLC Link**
Open-source Cardano smart contract verification tool. Verify source code against on-chain scripts, explore the registry, and build trust.

---

### [CF Cardano Ballot](https://github.com/cardano-foundation/cf-cardano-ballot)
**Cardano Foundation**
Cardano Ballot is a user-friendly, hybrid on- and off-chain voting system developed by the Cardano Foundation.
Cardano Ballot leverages a set of backend services combined with frontend applications to facilitate voting within the Cardano Ecosystem.

---

### [CF Reeve Platform](https://github.com/cardano-foundation/cf-reeve-platform)
**Cardano Foundation**
The Reeve platform is designed to integrate traditional accounting systems with blockchain technology, ensuring transparency, immutability, and enhanced security for financial records.

---

### [CF AdaHandle Resolver](https://github.com/cardano-foundation/cf-adahandle-resolver)
**Cardano Foundation**
An efficient resolution service for AdaHandle, Cardano's human-readable wallet address system, providing fast lookups and integration capabilities.

---

### [AdaMatic](https://adamatic.xyz/)
**Easy1 Staking**

---

### [SundaeSwap Scooper Analytics](https://github.com/easy1staking-com/sundaeswap-scooper-analytics)
**Easy1 Staking**
A simple crawler app that stores relevant scoop transaction info and serves aggreagate data over a rest endpoint.

---
### [CBI Backend Service](https://github.com/Cardano-Fans/cbi-backend)
**Cardano Fans (CRFA)**

---

### [Nexus](https://market.gerowallet.io)
**[A.D. Labs](https://adlabs.dev)**
Multi-chain blockchain data API. Nexus uses Yaci Store as its primary Cardano data provider - powering address, transaction, asset, pool, and DRep endpoints - behind a connection-pooled REST client with batched fan-out for high-concurrency queries. API available at https://nexus.gerowallet.io.

<div style={{ height: '2rem' }} />

## Technical Integration Patterns

These projects demonstrate various integration patterns with Yaci Store:

- **API Gateway Pattern**: Cardano Rosetta uses Yaci Store as a data layer for standardized blockchain APIs
- **Event-Driven Architecture**: FluidTokens leverages the event system for real-time token tracking
- **Analytics Pipeline**: SundaeSwap Analytics uses selective stores for focused DeFi data
- **Microservices**: AdaHandle Resolver runs as a lightweight service with minimal stores enabled
- **Governance Infrastructure**: Ballot and Reeve platforms utilize governance stores for on-chain voting
- **Automation Workflows**: AdaMatic integrates multiple stores for complex blockchain interactions
- **High-Concurrency Data API**: Nexus fronts Yaci Store as a multi-provider Cardano data API, batching per-tx/per-utxo fan-out behind a tuned HTTP pool

## Join the Community

<div style={{ display: 'flex', flexWrap: 'wrap', gap: '1.5rem', justifyContent: 'center', maxWidth: '720px', margin: '2.5rem auto 0' }}>
  <a href="/docs/v2/getting-started/overview" style={{ flex: '1 1 260px', maxWidth: '330px', textAlign: 'center', padding: '2rem 1.5rem', border: '2px solid #3b82f6', borderRadius: '12px', textDecoration: 'none', color: 'inherit' }}>
    <div style={{ fontSize: '1.15rem', fontWeight: 700, marginBottom: '0.5rem' }}>Start Building</div>
    <div style={{ fontSize: '0.95rem', opacity: 0.85 }}>Get started with Yaci Store and build your own Cardano application</div>
  </a>
  <a href="https://github.com/bloxbean/yaci-store/issues/new" style={{ flex: '1 1 260px', maxWidth: '330px', textAlign: 'center', padding: '2rem 1.5rem', border: '2px solid #3b82f6', borderRadius: '12px', textDecoration: 'none', color: 'inherit' }}>
    <div style={{ fontSize: '1.15rem', fontWeight: 700, marginBottom: '0.5rem' }}>Share Your Project</div>
    <div style={{ fontSize: '0.95rem', opacity: 0.85 }}>Tell us about your project to be featured on this page</div>
  </a>
</div>
